--- a/projetoPlanejar/index.html
+++ b/projetoPlanejar/index.html
@@ -15,7 +15,14 @@
         <input type="date" name="data_inicial" required>
         <label for="hora_inicial">Hora Inicial:</label>
         <input type="time" name="hora_inicial" required>
-
+        <br><br>
+        <label for="data_final">Data Final:</label>
+        <input type="date" name="data_final" required>
+        <label for="hora_final">Hora Final:</label>
+        <input type="time" name="hora_final" required>
+        <br><br>
+        <input type="submit" value="Calcular">
+    </form>
 </body>
 
 </html>
